--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -34,7 +34,7 @@ $app-direction: ltr;
 // The "primary" color is the only required color in the map.
 
 $colors: (
-  primary:    #0a80a4,
+  primary:    #4a8bfc,
   secondary:  #32db64,
   danger:     #f53d3d,
   light:      #f4f4f4,
